# prefect_acr

./: Dockerfile  Dockerfile.Demo  README.md  deployment.yaml  deployment.yml  hello.yaml  hello_1.yaml  hello_2.yaml  prefect.yaml  pyproject.toml  requirements.txt  serviceaccount.yml  values.yml
.github/workflows/: env-separated-deploy.yml
blocks/: databricks_blocks.py
flows/: async_databricks_api_exec.py  async_gpa.py  async_postgres_sql_exec.py  async_rest_api_exec.py  databricks_api_exec.py  prefect.yaml
flows/blocks/: async_sqlalchemy_blocks.py  databricks_blocks.py  sqlalchemy_blocks.py
scripts/: DDLs.sql  asycn.py  async_orc.py  get_Details.py  get_flows.py  metadata_reads.ipynb
tests/: datman_values.yml  deployment_vals.yml  pre.yaml
tests/scripts/: DDLs.sql  as_test.py  aso.py  datman.sql  dbt.py  gather_tasks.py  get_flow_entrypoints.py  prefect_get.py  sample.py
