# package metadata

[project]
name = "prefect-monorepo"
dynamic = ["version"]
description = "A demo monorepo for Prefect workflows."
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "prefect~=2.11.3",
    "marvin~=1.2.1",
    "prefect-docker>=0.2.2",
    "prefect-kubernetes>=0.2.6",
    "prefect-databricks",
    "docker",
]

[project.optional-dependencies]


[project.urls]
Code = "https://github.com/zzstoatzz/prefect-monorepo"
Documentation = "https://github.com/zzstoatzz/prefect-monorepo/README.md"

[build-system]
requires = ["setuptools>=45", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]

# pytest configuration
[tool.pytest.ini_options]
markers = ["llm: indicates that a test calls an LLM (may be slow)."]

testpaths = ["tests"]

norecursedirs = [
    "*.egg-info",
    ".git",
    ".mypy_cache",
    ".pytest_cache",
    ".ruff_cache",
    ".vscode",
    "node_modules",
]

asyncio_mode = 'auto'

filterwarnings = [
    "ignore:'crypt' is deprecated and slated for removal in Python 3.13:DeprecationWarning",
]
env = [
    "MARVIN_LLM_TEMPERATURE=0",
    "MARVIN_LLM_MODEL=openai/gpt-3.5-turbo",
]

# black configuration
[tool.black]
preview = true

# ruff configuration
[tool.ruff]
extend-select = ["I"]

[tool.ruff.per-file-ignores]
"__init__.py" = ['I', 'F401', 'E402']
"conftest.py" = ["F401", "F403"]
'tests/fixtures/*.py' = ['F403']